<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Librarian</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_menu_order_az">Order A-Z</string>
    <string name="label_menu_order_date">Order by date</string>
    <string name="label_menu_order">Order items</string>
    <string name="decor_lbl_username">DROPBOX\'s USERNAME</string>
    <string name="decor_lbl_password">DROPBOX\'s PASSWORD:</string>
    <string name="btn_login">Login</string>
    <string name="btn_login_dropbox">Login Dropbox</string>
    <string name="action_menu_logout">Logout Dropbox</string>
    <string name="no_books">No ePubs found :(</string>
    <string name="downloading">The cover is downloading right now, check later.</string>

</resources>