<menu xmlns:android="http://schemas.android.com/apk/res/android" 
     xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/orderMenu"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always"
        yourapp:showAsAction="always"
        android:title="@string/label_menu_order"
       >
        <menu>
            <item
                android:id="@+id/menuOrderAZ"
                android:title="@string/label_menu_order_az"/>
            <item
                android:id="@+id/menuOrderDate"
                android:title="@string/label_menu_order_date"/>
        </menu>
    </item>
    <item
        android:id="@+id/overflowsettings"
        android:orderInCategory="100"
        
         android:icon="@drawable/ic_action_overflow"
        yourapp:showAsAction="always"
        
       android:title="@string/action_settings">
        <menu>
            <item android:id="@+id/action_settings" android:title="@string/action_menu_logout"/>
        </menu>
    </item>

</menu>