<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/decorLblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtUserName"
        android:layout_centerVertical="true"
        android:text="@string/decor_lbl_username"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/decorLblName"
        android:layout_centerHorizontal="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/decorLblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtUserName"
        android:layout_below="@+id/edtUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/element_margin"
        android:text="@string/decor_lbl_password" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/decorLblPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edtPassword"
        android:layout_below="@+id/edtPassword"
        android:layout_marginTop="16dp"
        android:text="@string/btn_login" />

</RelativeLayout>